@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.35 2000-02-28 11:15:02 macgyver Exp $
+$Id: NEWS,v 1.36 2000-02-28 18:57:18 macgyver Exp $
 
 1.2.0 - Released: ???
 ---------------------
@@ -17,6 +17,8 @@ $Id: NEWS,v 1.35 2000-02-28 11:15:02 macgyver Exp $
 - FreeBSD 4.0 support
 - Unixware support
 - Updated config.guess and config.sub to reflect new platforms
+- Added a %k directive to DisplayQuit that shows a more user-friendly count of
+  data transferred (ie: 23MB, 1.2GB, etc.)
 
 1.2.0pre10 - Released: 1/17/00
 ------------------------------
